--- a/debian/control
+++ b/debian/control
@@ -16,7 +16,9 @@ Build-Depends: chrpath, debhelper (>= 9~), ghostscript, libbz2-dev,
  libwmf-dev, libx11-dev, libxext-dev, libxml2-dev, libxt-dev, pkg-config,
  zlib1g-dev, liblzma-dev, libpango1.0-dev, librsvg2-bin,
 # for converting svg
- inkscape
+ inkscape,
+# for easy symbols of c++ lib
+ pkg-kde-tools
 Vcs-Browser: http://git.debian.org/?p=collab-maint/imagemagick.git
 Vcs-Git: git://git.debian.org/collab-maint/imagemagick.git
 Homepage: http://www.imagemagick.org/
