--- a/Makefile.in
+++ b/Makefile.in
@@ -3967,7 +3967,8 @@ MAGICKCORE_LIBS = magick/libMagickCore.la
 magick_libMagickCore_la_CPPFLAGS = -I$(top_builddir)/ltdl -I$(top_srcdir)/ltdl $(LIBRARY_EXTRA_CPPFLAGS)
 @HAVE_LD_VERSION_SCRIPT_FALSE@magick_libMagickCore_la_LDFLAGS_VERSION = -export-symbols-regex ".*"
 @HAVE_LD_VERSION_SCRIPT_TRUE@magick_libMagickCore_la_LDFLAGS_VERSION = -Wl,--version-script=$(top_srcdir)/magick/libMagickCore.map
-magick_libMagickCore_la_LDFLAGS = -no-undefined $(magick_libMagickCore_la_LDFLAGS_VERSION) \
+magick_libMagickCore_la_LDFLAGS = -no-undefined \
+  $(magick_libMagickCore_la_LDFLAGS_VERSION) \
   $(OSX_GCOV_LDFLAG) $(MAGICK_LT_RELEASE_OPTS) -version-info \
   $(MAGICK_LIBRARY_CURRENT):$(MAGICK_LIBRARY_REVISION):$(MAGICK_LIBRARY_AGE)
 
@@ -4473,11 +4474,12 @@ WAND_MANS = \
 
 WAND_BUILT_SRCS = 
 MAGICKWAND_LIBS = wand/libMagickWand.la
-@HAVE_LD_VERSION_SCRIPT_FALSE@magick_libMagickWand_la_LDFLAGS_VERSION = -export-symbols-regex ".*"
-@HAVE_LD_VERSION_SCRIPT_TRUE@magick_libMagickWand_la_LDFLAGS_VERSION = -Wl,--version-script=$(top_srcdir)/wand/libMagickWand.map
 wand_libMagickWand_la_SOURCES = $(WAND_SOURCES)
 wand_libMagickWand_la_CPPFLAGS = $(LIBRARY_EXTRA_CPPFLAGS)
-wand_libMagickWand_la_LDFLAGS = -no-undefined $(magick_libMagickWand_la_LDFLAGS_VERSION) \
+@HAVE_LD_VERSION_SCRIPT_FALSE@magick_libMagickWand_la_LDFLAGS_VERSION = -export-symbols-regex ".*"
+@HAVE_LD_VERSION_SCRIPT_TRUE@magick_libMagickWand_la_LDFLAGS_VERSION = -Wl,--version-script=$(top_srcdir)/wand/libMagickWand.map
+wand_libMagickWand_la_LDFLAGS = -no-undefined \
+  $(magick_libMagickWand_la_LDFLAGS_VERSION) \
 	$(MAGICK_LT_RELEASE_OPTS) -version-info \
 	$(MAGICK_LIBRARY_CURRENT):$(MAGICK_LIBRARY_REVISION):$(MAGICK_LIBRARY_AGE)
 
