--- a/Magick++/Makefile.am
+++ b/Magick++/Makefile.am
@@ -135,7 +135,8 @@ else
 Magick___lib_libMagick___la_LDFLAGS_VERSION = -export-symbols-regex ".*"
 endif
 
-Magick___lib_libMagick___la_LDFLAGS = -no-undefined $(MAGICK_LT_RELEASE_OPTS) \
+Magick___lib_libMagick___la_LDFLAGS = -no-undefined \
+  $(Magick___lib_libMagick___la_LDFLAGS_VERSION) $(MAGICK_LT_RELEASE_OPTS) \
 	-version-info $(MAGICK_LIBRARY_CURRENT):$(MAGICK_LIBRARY_REVISION):$(MAGICK_LIBRARY_AGE)
 Magick___lib_libMagick___la_LIBADD = $(MAGICKCORE_LIBS) $(MAGICKWAND_LIBS)
 
