--- a/debian/display.im6.desktop
+++ b/debian/display.im6.desktop
@@ -4,7 +4,7 @@ Name=ImageMagick (display)
 Comment=Display and edit image files
 Comment[fr]=Affiche et édite des fichiers images
 Comment[pt]=Exiba e edite arquivos de imagem
-Exec=/usr/bin/display.im6 %f
+Exec=/usr/bin/display.q16.im6 %f
 Terminal=false
 Icon=display.im6
 Type=Application
